# python-utils

./: .dir-locals.el  .gitignore  README.md  docker_qdrant_container.py  env_backup_global_ignore.txt  env_backup_restore.py  excel_concat.py  git-lineendings.py  git-pull-batch.py  git_common.py  git_lineendings.py  git_pull_batch.py  pyhton_to_rag.py  pyproject.toml  python-utils.code-workspace  python_cleanup.py  revit_create_forge_type_id_mapping.py  ruff.toml  run_tests.py  scrape_markdown.py  test_git_lineendings.py
analyzer/: README.md  data_analyzer.py
analyzer/tests/: test_classifier_registry.py  test_classifiers.py  test_engine.py  test_enums_helpers.py  test_main_functions.py  test_type_inference.py  test_unit.py  test_unit_extractor.py  test_units.py
