[project]
name = "env-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.3",
    "click>=8.1.8",
    "gitpython>=3.1.44",
    "rich>=14.0.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]
